pkg/lang/testdata/ub/constraints/valid/check-predicate-no-message-defaults.ub
constraints: [
  {
    kind:    predicate
    when:    true
    require: false
  },
]
