pkg/lang/testdata/ub/constraints/invalid/predicate-missing-require.ub
constraints: [
  { kind: predicate, when: 'true' },
]
